--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
